--- a/DirectorySynch/MainWindow.xaml
+++ b/DirectorySynch/MainWindow.xaml
@@ -7,6 +7,29 @@
         mc:Ignorable="d"
         Title="Directory Synchronization" Height="450" Width="800">
     <Grid>
-        
+        <Menu IsMainMenu="True">
+            <MenuItem Header="_File" />
+            <MenuItem Header="_Edit">
+                <MenuItem Header="_Cut" Command="Cut">
+                    <MenuItem.Icon>
+                        <Image Source="Images/Cut_16x.png" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="_Copy" Command="Copy">
+                    <MenuItem.Icon>
+                        <Image Source="Images/Copy_16x.png" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="_Paste" Command="Paste">
+                    <MenuItem.Icon>
+                        <Image Source="Images/Paste_16x.png" />
+                    </MenuItem.Icon>
+                </MenuItem>
+            </MenuItem>
+            <MenuItem Header="_View" />
+            <MenuItem Header="_Window" />
+            <MenuItem Header="_Help" />
+        </Menu>
+
     </Grid>
 </Window>
